src/main/python/compiladoresParser.py
# Generated from /home/agos/dhs/src/main/python/compiladores.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'int'", "'float'", "'char'", 
                     "'string'", "'void'", "'if'", "'else'", "'for'", "'while'", 
                     "'return'", "<INVALID>", "'='", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'&&'", "'||'", "'!'", "'('", "')'", "'{'", 
                     "'}'", "';'", "','", "'<<'", "'>>'", "'?'", "':'" ]

    symbolicNames = [ "<INVALID>", "NUMERO", "INT", "FLOAT", "CHAR", "STRING", 
                      "VOID", "IF", "ELSE", "FOR", "WHILE", "RETURN", "WS", 
                      "EQ", "EQQ", "NE", "LT", "GT", "LE", "GE", "MAS", 
                      "MENOS", "MULT", "DIV", "MOD", "AND", "ORR", "NOT", 
                      "PA", "PC", "LLA", "LLC", "PYC", "COMA", "SHL", "SHR", 
                      "TERNARIO", "DOS_PUNTOS", "ID", "OTRO" ]

    RULE_programa = 0
    RULE_instrucciones = 1
    RULE_instruccion = 2
    RULE_bloque = 3
    RULE_valor = 4
    RULE_tipo = 5
    RULE_operador = 6
    RULE_declaracion = 7
    RULE_lista_var = 8
    RULE_definicion = 9
    RULE_asignacion = 10
    RULE_oplo = 11
    RULE_logic_expr = 12
    RULE_logic_termino = 13
    RULE_logic_term = 14
    RULE_logic_factor = 15
    RULE_comp = 16
    RULE_opar = 17
    RULE_exp = 18
    RULE_termino = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_proto_funcion = 22
    RULE_funcion = 23
    RULE_retornar = 24
    RULE_call_funcion = 25
    RULE_args = 26
    RULE_lista_args = 27
    RULE_arg = 28
    RULE_send_args = 29
    RULE_lista_send_args = 30
    RULE_i_while = 31
    RULE_i_if = 32
    RULE_i_else = 33
    RULE_i_for = 34
    RULE_ternario = 35

    ruleNames =  [ "programa", "instrucciones", "instruccion", "bloque", 
                   "valor", "tipo", "operador", "declaracion", "lista_var", 
                   "definicion", "asignacion", "oplo", "logic_expr", "logic_termino", 
                   "logic_term", "logic_factor", "comp", "opar", "exp", 
                   "termino", "term", "factor", "proto_funcion", "funcion", 
                   "retornar", "call_funcion", "args", "lista_args", "arg", 
                   "send_args", "lista_send_args", "i_while", "i_if", "i_else", 
                   "i_for", "ternario" ]

    EOF = Token.EOF
    NUMERO=1
    INT=2
    FLOAT=3
    CHAR=4
    STRING=5
    VOID=6
    IF=7
    ELSE=8
    FOR=9
    WHILE=10
    RETURN=11
    WS=12
    EQ=13
    EQQ=14
    NE=15
    LT=16
    GT=17
    LE=18
    GE=19
    MAS=20
    MENOS=21
    MULT=22
    DIV=23
    MOD=24
    AND=25
    ORR=26
    NOT=27
    PA=28
    PC=29
    LLA=30
    LLC=31
    PYC=32
    COMA=33
    SHL=34
    SHR=35
    TERNARIO=36
    DOS_PUNTOS=37
    ID=38
    OTRO=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(compiladoresParser.EOF, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladoresParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.instrucciones()
            self.state = 73
            self.match(compiladoresParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compiladoresParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.instruccion()
                self.state = 76
                self.instrucciones()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def retornar(self):
            return self.getTypedRuleContext(compiladoresParser.RetornarContext,0)


        def i_if(self):
            return self.getTypedRuleContext(compiladoresParser.I_ifContext,0)


        def i_for(self):
            return self.getTypedRuleContext(compiladoresParser.I_forContext,0)


        def i_while(self):
            return self.getTypedRuleContext(compiladoresParser.I_whileContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compiladoresParser.FuncionContext,0)


        def call_funcion(self):
            return self.getTypedRuleContext(compiladoresParser.Call_funcionContext,0)


        def proto_funcion(self):
            return self.getTypedRuleContext(compiladoresParser.Proto_funcionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladoresParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.declaracion()
                self.state = 82
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.asignacion()
                self.state = 85
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.retornar()
                self.state = 88
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.i_if()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.i_for()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.i_while()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.funcion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.call_funcion()
                self.state = 95
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 97
                self.proto_funcion()
                self.state = 98
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 100
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(compiladoresParser.LLA, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def LLC(self):
            return self.getToken(compiladoresParser.LLC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladoresParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(compiladoresParser.LLA)
            self.state = 104
            self.instrucciones()
            self.state = 105
            self.match(compiladoresParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)




    def valor(self):

        localctx = compiladoresParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==1 or _la==38):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(compiladoresParser.INT, 0)

        def FLOAT(self):
            return self.getToken(compiladoresParser.FLOAT, 0)

        def CHAR(self):
            return self.getToken(compiladoresParser.CHAR, 0)

        def STRING(self):
            return self.getToken(compiladoresParser.STRING, 0)

        def VOID(self):
            return self.getToken(compiladoresParser.VOID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = compiladoresParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 124) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQQ(self):
            return self.getToken(compiladoresParser.EQQ, 0)

        def NE(self):
            return self.getToken(compiladoresParser.NE, 0)

        def GT(self):
            return self.getToken(compiladoresParser.GT, 0)

        def LT(self):
            return self.getToken(compiladoresParser.LT, 0)

        def GE(self):
            return self.getToken(compiladoresParser.GE, 0)

        def LE(self):
            return self.getToken(compiladoresParser.LE, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_operador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperador" ):
                listener.enterOperador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperador" ):
                listener.exitOperador(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperador" ):
                return visitor.visitOperador(self)
            else:
                return visitor.visitChildren(self)




    def operador(self):

        localctx = compiladoresParser.OperadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1032192) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compiladoresParser.TipoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def definicion(self):
            return self.getTypedRuleContext(compiladoresParser.DefinicionContext,0)


        def lista_var(self):
            return self.getTypedRuleContext(compiladoresParser.Lista_varContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = compiladoresParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.tipo()
            self.state = 114
            self.match(compiladoresParser.ID)
            self.state = 115
            self.definicion()
            self.state = 116
            self.lista_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(compiladoresParser.COMA, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def definicion(self):
            return self.getTypedRuleContext(compiladoresParser.DefinicionContext,0)


        def lista_var(self):
            return self.getTypedRuleContext(compiladoresParser.Lista_varContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_lista_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_var" ):
                listener.enterLista_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_var" ):
                listener.exitLista_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista_var" ):
                return visitor.visitLista_var(self)
            else:
                return visitor.visitChildren(self)




    def lista_var(self):

        localctx = compiladoresParser.Lista_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lista_var)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(compiladoresParser.COMA)
                self.state = 119
                self.match(compiladoresParser.ID)
                self.state = 120
                self.definicion()
                self.state = 121
                self.lista_var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(compiladoresParser.COMA)
                self.state = 124
                self.definicion()
                self.state = 125
                self.lista_var()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(compiladoresParser.EQ, 0)

        def oplo(self):
            return self.getTypedRuleContext(compiladoresParser.OploContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_definicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicion" ):
                listener.enterDefinicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicion" ):
                listener.exitDefinicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicion" ):
                return visitor.visitDefinicion(self)
            else:
                return visitor.visitChildren(self)




    def definicion(self):

        localctx = compiladoresParser.DefinicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_definicion)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(compiladoresParser.EQ)
                self.state = 131
                self.oplo()
                pass
            elif token in [32, 33]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def EQ(self):
            return self.getToken(compiladoresParser.EQ, 0)

        def oplo(self):
            return self.getTypedRuleContext(compiladoresParser.OploContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = compiladoresParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(compiladoresParser.ID)
            self.state = 136
            self.match(compiladoresParser.EQ)
            self.state = 137
            self.oplo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OploContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_termino(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_terminoContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_exprContext,0)


        def ternario(self):
            return self.getTypedRuleContext(compiladoresParser.TernarioContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_oplo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplo" ):
                listener.enterOplo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplo" ):
                listener.exitOplo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOplo" ):
                return visitor.visitOplo(self)
            else:
                return visitor.visitChildren(self)




    def oplo(self):

        localctx = compiladoresParser.OploContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_oplo)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.logic_termino()
                self.state = 140
                self.logic_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.ternario()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORR(self):
            return self.getToken(compiladoresParser.ORR, 0)

        def logic_termino(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_terminoContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_exprContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_logic_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_expr" ):
                listener.enterLogic_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_expr" ):
                listener.exitLogic_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_expr" ):
                return visitor.visitLogic_expr(self)
            else:
                return visitor.visitChildren(self)




    def logic_expr(self):

        localctx = compiladoresParser.Logic_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logic_expr)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(compiladoresParser.ORR)
                self.state = 146
                self.logic_termino()
                self.state = 147
                self.logic_expr()
                pass
            elif token in [29, 32, 33, 36, 37]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_terminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_factor(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_factorContext,0)


        def logic_term(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_termContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_logic_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_termino" ):
                listener.enterLogic_termino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_termino" ):
                listener.exitLogic_termino(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_termino" ):
                return visitor.visitLogic_termino(self)
            else:
                return visitor.visitChildren(self)




    def logic_termino(self):

        localctx = compiladoresParser.Logic_terminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logic_termino)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.logic_factor()
            self.state = 153
            self.logic_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(compiladoresParser.AND, 0)

        def logic_factor(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_factorContext,0)


        def logic_term(self):
            return self.getTypedRuleContext(compiladoresParser.Logic_termContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_logic_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_term" ):
                listener.enterLogic_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_term" ):
                listener.exitLogic_term(self)
